k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rag-dev
  labels: 
    name: rag-chatbot
    environment: dev
